Adicionado get(0) para evitar erro de compilação